# projeto_pousada

./: .gitignore  README.md  abrir_django.bat  db.sqlite3  manage.py  pousada_teste01.sqlite3  pyproject.toml
pousada/: asgi.py  settings.py  urls.py  wsgi.py
reservas/: .gitignore  admin.py  forms.py  models.py  urls.py  views.py
reservas/migrations/: 0001_initial.py  0002_rename_data_reserva_reservas_data_pgto_reserva_and_more.py
reservas/templates/: consultar_reservas.html  editar_reserva.html  excluir_reserva.html  exibir_reservas.html  fazer_reserva.html  menu.html  verificar_reservas.html
