[tool.poetry]
name = "projeto-pousada"
version = "0.1.0"
description = "visualizar reserva aptos pousada"
authors = ["CarlosHeiden <carlos.heiden@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
django = "^5.0"
django-import-export = "^3.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
